--- a/package.json
+++ b/package.json
@@ -13,9 +13,21 @@
     "less": "3.0.4",
     "less-vars-to-js": "1.3.0",
     "next": "latest",
+    "next-compose-plugins": "^2.2.0",
     "null-loader": "2.0.0",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "postcss-normalize": "^9.0.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-scripts": "^4.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "customize-cra": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "mini-css-extract-plugin": "^1.3.0",
+    "postcss-preset-env": "^6.7.0",
+    "react-dev-utils": "^11.0.0"
+  }
 }
